--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car rent</title>
+    <title>Car Rent</title>
+    <link rel="icon" href="/logo.svg" type="image/x-icon">
 </head>
 <body>
     <div id="root"></div>
